--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,16 +12,24 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Farmapp_project"
         tools:targetApi="31">
+
         <activity
-            android:name=".MainActivity"
+            android:name=".AuthActivity"
             android:exported="true"
-            android:label="@string/app_name"
+            android:label="@string/title_activity_auth"
             android:theme="@style/Theme.Farmapp_project">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.Farmapp_project">
+
         </activity>
     </application>
 
